@@ -84,7 +84,6 @@
       ></app-check-in-form-metric>
       <app-check-in-form-ordinal
         *ngIf="keyResult.keyResultType === 'ordinal'"
-        [checkIn]="checkIn"
         [dialogForm]="dialogForm"
         [keyResult]="getKeyResultOrdinal()"
       ></app-check-in-form-ordinal>
